--- a/theme/templates/accounts/account_password_reset.html
+++ b/theme/templates/accounts/account_password_reset.html
@@ -25,7 +25,7 @@
             <div class="row">
                 {% include "includes/checkbox_field.html" with field=form.email  field_classes="col-md-12" %}
             </div>
-            <p class="text-muted">Enter your username or email address and you'll receive an email with a link you need to click, in order to log in and change your password.</p>
+            <p class="text-muted">Enter your username or email address and you'll receive an email with a link you need to click in order to log in and change your password.</p>
             {% block account_form_actions %}
                 <div class="row">
                     <div class="col-md-12">
