Minor css changes (border, padding, etc)

--- a/hs_core/templates/search/search.html
+++ b/hs_core/templates/search/search.html
@@ -7,7 +7,7 @@
     <div class="row">
         <div class="col-lg-3" id="folders">
             {% if query %}
-                <input class="btn btn-default" type="button" value="clear all" onclick="clearAllFaceted()">
+                <input id="btn-clear-all" class="btn btn-default" type="button" value="Clear All" onclick="clearAllFaceted()">
                 <span id="color-scheme">
                     <svg width='180' height='24'>
                         <rect class="YellowGreenBlue-colormap-band-1-fill" x="0" width="20" height="20"></rect>
