Undo block extra_js removal from base.html. Moved block extra_js out of main block in genericresource.html

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -44,6 +44,7 @@
 <script src='{% static 'js/jquery-ui.js' %}'></script>
 <script src="{% static "js/bootstrap.3.0.2.min.js" %}"></script>
 <script src="{% static "js/bootstrap-extras.js" %}"></script>
+{% block extra_js %}{% endblock %}
 {% endcompress %}
 {% include 'autocomplete_light/static.html' %}
 
