--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -2016,16 +2016,17 @@
                         </div>
                         <div class="modal-body">
                             <p>
-                                Once you submit the resource for publication it cannot be changed. The resource will be
-                                assigned a DOI and will become immutable and be permanently published. However, the owners
-                                of this resource can still create new versions of this resource after it is published.
-                                <strong> You must check the checkbox to agree to HydroShare publication agreement below
-                                    before you can submit the resource for publication. </strong>
+                                Upon submitting the resource for publication it will be permanently published and assigned a
+                                digital object identifier (DOI). This is <strong>final</strong> and changes can only be made
+                                on a new version (copy) of the resource.
+                            </p>
+                            <p>
+                                 Please confirm that you accept the HydroShare Publication Agreement shown below.
                             </p>
                             <div class="iframe-border">
                                 <iframe id="pub-agreement-frame" scrolling="no" src="https://www.hydroshare.org/publication-agreement/"></iframe>
                             </div>
-                            <input type="checkbox" id="agree-chk"><label for="agree-chk" class="checkbox-label">I agree to the HydroShare Publication Agreement</label>
+                            <input type="checkbox" id="agree-chk"><label for="agree-chk" class="checkbox-label">I accept the HydroShare Publication Agreement.</label>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
