--- a/hs_core/templates/pages/my-resources.html
+++ b/hs_core/templates/pages/my-resources.html
@@ -401,6 +401,20 @@
     <script type="text/javascript">
         var resourceTable;
 
+        function getTableMaxScrollSize() {
+            /* Large Devices, Wide Screens
+             @media only screen and (min-width : 1200px)*/
+            var largeDeviceScreenSize = 1200;
+            if ($(window).width() >= largeDeviceScreenSize) {
+                scrollY = $("body > .container").height();
+            }
+            else {
+                scrollY = Math.max(500, ($("body > .container").height() - $("#facets").height()));
+            }
+
+            return scrollY;
+        }
+
         $(document).ready(function () {
 
         /*==================================================
@@ -422,7 +436,7 @@
                 "order": [[4, "asc"]],
                 "paging": false,
                 "info": false,
-                "scrollY": "523px",
+                "scrollY": getTableMaxScrollSize(),
                 "scrollCollapse": true,
                 "columnDefs": [
                     {
@@ -469,8 +483,11 @@
                         "visible": false,
                         "searchable": true
                     }
-
                 ]
+            });
+
+            $(window).resize(function () {
+                $('.dataTables_scrollBody').css('max-height', getTableMaxScrollSize());
             });
 
             // Trigger label creation when pressing Enter
