--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -62,6 +62,21 @@
         <div class="col-sm-12">
             {% if not metadata_form %}
                 <h2>{{ title }}</h2>
+                {% if relevant_tools %}
+                    <span id="apps-dropdown">
+                    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Open with...
+                        <span class="caret"></span></button>
+                    <ul class="dropdown-menu">
+                        {% for tool in relevant_tools %}
+                            <li>
+                                <a href="{{ tool.url }}" target="_blank">
+                                    <img class="dropdown-webapp-icon" src="{{ tool.icon }}">
+                                    <span>{{ tool.title }}</span>
+                                </a>
+                            </li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}
             {% else %}
                 <form action="/hsapi/_internal/{{ cm.short_id }}/title/{{ cm.metadata.title.id }}/update-metadata/"
                       id="id-title"
@@ -3457,13 +3472,6 @@
                         $(this).closest("form").find("button").show();
                     });
                 });
-                $('.user-webapp-icon').on('error', function() {
-                    $(this)
-                            .attr('src', '{{ STATIC_URL }}img/web-app-default-icon.png')
-                            .removeClass('user-webapp-icon')
-                            .addClass('default-webapp-icon');
-                });
-
             });
         </script>
         {% if relevant_tools %}
@@ -3481,9 +3489,7 @@
                                 .removeClass('dropdown-webapp-icon')
                                 .addClass('default-dropdown-webapp-icon');
                     });
-                    if ($('#apps-dropdown').length == 1) {
-                        $('h2').attr('style', 'width: calc(100% - 110px);');
-                    }
+                    $('h2').attr('style', 'width: calc(100% - 110px);');
                 });
             </script>
         {% endif %}
@@ -3492,7 +3498,7 @@
 
     {% block extra_css %}
         {{ block.super }}
-        <link href="{{ STATIC_URL }}css/toolresource.css" rel="stylesheet"/>
+        {% if relevant_tools %}
+            <link href="{{ STATIC_URL }}css/toolresource.css" rel="stylesheet"/>
+        {% endif %}
     {%  endblock %}
-
-
