[#839] handle permission phase-1

--- a/hs_collection_resource/templates/pages/collectionresource.html
+++ b/hs_collection_resource/templates/pages/collectionresource.html
@@ -25,6 +25,10 @@
 
                         </div>
                     {% endif %}
+                      <br/>
+                      <div style="font-size: smaller; color: red">
+                        {{ collection_message }}
+                      </div>
                 </div>
             </div>
         </div>
